# ssa-march-madness

./: .gitignore  CLAUDE.md  Makefile  README.md  dating-plan-chicago.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.yaml  features.yaml
config/models/: ensemble.yaml  logistic.yaml  neural_net.yaml  xgboost.yaml
research/: article-draft-v1.md  article-outline.md  article-pitches.md  competition-research.md  data-sources.md  day1-game-analysis.md  past-winners-research.md  phase1-eda-report.md  phase2-feature-engineering-report.md  phase3-data-preparation-report.md  phase4-model-training-report.md  phase5-calibration-ensemble-report.md  phase6-submission-report.md  phase7-player-data-findings.md  prompt-game-analysis.md
research/article-draft/: audit-checklist.md  draft.md  newsletter-header.html  notes.md  notion-snapshot.md  notion_editorial.py  notion_editorial2.py  notion_editorial3.py  r32-data-reference.md  visual-1a-pipeline-architecture.html  visual-1b-pipeline-sankey.html  visual-2a-session2-decision.html  (+3 more)
results/: bracket_chalk.txt  bracket_monte_carlo.txt  injury_adjusted_predictions.txt  process_visual.html  process_visual_mobile.html
scripts/: build_showcase.py  calibrate_and_ensemble.py  create_article_visuals.py  create_article_visuals_v2.py  create_misses_table.py  create_updated_visuals.py  deep_analysis.py  finish_analysis.py  generate_submission.py  injury_adjustment.py  player_analysis.py  regenerate_figures.py  simulate_brackets.py  train_bradley_terry.py  train_logistic.py  train_nn.py  train_trees.py
(+13 files in other folders)
